--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+:host {
+    text-size-adjust: 100%; /* For modern browsers */
+}
+body {
+    text-size-adjust: 100%;
+}
+.some-class {
+    appearance: none;
+}
